--- a/src/main/resources/static/style/dashboard-style.css
+++ b/src/main/resources/static/style/dashboard-style.css
@@ -4,8 +4,10 @@
 }
 
 .resume-title {
-    margin-left: 1.5%;
-    font-size: 1.7rem;
+    margin-left: -5%;
+    margin-top: 5%;
+    font-size: 1.4rem;
+    margin-bottom: 5%;
 }
 
 .myCard {
@@ -28,18 +30,18 @@ span.companyName {
 }
 
 span.companyAddress {
-    margin-left: 1.5%;
+    margin-left: -5%;
     font-size: small;
 }
 
 span.smaller {
-    margin-left: 1.5%;
+    margin-left: -5%;
     font-size: small;
 }
 
 span.job {
     margin-top: 1.5%;
-    margin-left: 1.5%;
+    margin-left: -5%;
 }
 
 .cards {
@@ -76,3 +78,9 @@ span.job {
 #paginationContainer strong {
     font-weight: bold;
 }
+
+.my-button {
+    margin-left: 15%;
+}
+
+
