--- a/src/main/resources/templates/main-announcement-info.html
+++ b/src/main/resources/templates/main-announcement-info.html
@@ -82,33 +82,33 @@
     <div class="card" style="width: 70rem; margin-bottom: 2rem;">
         <div class="my-container pb-3">
             <p class="subtitle"><b>Company description</b></p>
-            <p class="text">{{companyDescription}}</p>
+            <pre class="text">{{companyDescription}}</pre>
         </div>
 
         <div class="my-container pb-3">
             <p class="subtitle"><b>Job description</b></p>
-            <p class="text">{{description}}</p>
+            <pre class="text">{{description}}</pre>
         </div>
 
         <div class="my-container pb-3">
             <p class="subtitle"><b>Skills</b></p>
-            <p class="text">{{skills}}</p>
+            <pre class="text">{{skills}}</pre>
         </div>
 
         <div class="my-container pb-3">
             <p class="subtitle"><b>Responsibility</b></p>
-            <p class="text">{{responsibility}}</p>
+            <pre class="text">{{responsibility}}</pre>
         </div>
 
         <div class="my-container pb-3">
             <p class="subtitle"><b>Requirement</b></p>
-            <p class="text">{{requirement}}</p>
+            <pre class="text">{{requirement}}</pre>
         </div>
 
         {{^areBenefits}}
         <div class="my-container pb-3">
             <p class="subtitle"><b>Benefits</b></p>
-            <p class="text">{{benefit}}</p>
+            <pre class="text">{{benefit}}</pre>
         </div>
         {{/areBenefits}}
     </div>
