--- a/src/main/resources/templates/my-applications.html
+++ b/src/main/resources/templates/my-applications.html
@@ -23,7 +23,7 @@
 <!--Main layout-->
 <main style="margin-top: 30px; margin-left: 50px">
     <div class="card" style="width: 70rem; height: 41rem;">
-        <p id="page-title"><b>My application</b></p>
+        <p id="page-title"><b>My applications</b></p>
         <div class="container-fluid pt-4 table-responsive-lg">
             <div class="tableFixHead">
                 <table class="table table-bordered table-sm dashboard-table">
