--- a/src/main/resources/templates/resume.html
+++ b/src/main/resources/templates/resume.html
@@ -30,7 +30,7 @@
         <p class="page-title"><b>Resume file</b></p>
 
         <!--Main layout-->
-        <div class="container pt-1">
+        <div class="my-cont pt-1">
             <div class="col-6">
                 <!-- Button to open the modal -->
                 <button type="button" class="btn btn-primary btn-sm" id="addFiles"
