--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -67,23 +67,36 @@
                 <ul class="cards">
                     {{#announcements}}
                     <li class="cards_item">
-                        <div class="card" style="width: 17rem; height: 15rem; margin-right: 2.5%">
-                            <div class="row">
-                                <div class="col-6">
-                                    <span class="small"><i class="far fa-calendar"></i>&nbsp; {{datePosted}}</span>
+                        <div class="card" style="width: 17rem; height: 15rem;">
+                            <div>
+                                <div class="row ">
+                                    <div class="col-6 ">
+                                        <span class="small"><i class="far fa-calendar"></i>&nbsp; {{datePosted}}</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <span class="small"><i
+                                                class="far fa-calendar-times"></i>&nbsp; {{dateEnded}}</span>
+                                    </div>
                                 </div>
-                                <div class="col-6">
-                                    <span class="small"><i class="far fa-calendar-times"></i>&nbsp; {{dateEnded}}</span>
+                                <div class="row">
+                                    <p class="resume-title"><b>{{jobName}}</b></p>
+                                </div>
+                                <div class="row">
+                                    <span class="smaller"><i class="fas fa-building"></i>&nbsp;{{companyName}}</span>
+                                </div>
+                                <div class="row">
+                                <span class="companyAddress" data-city="{{companyCity}}"><i
+                                        class="fas fa-map-marker-alt"></i>&nbsp; {{companyCity}}</span>
+                                    <span class="a-job smaller"><i class="fas fa-briefcase"></i>&nbsp;{{jobType}}, {{jobLevel}}</span>
+                                </div>
+
+                                <div class="row my-button">
+                                    <a type="button" href="/announcement-info/{{userApp.id}}/{{id}}"
+                                       class="btn btn-primary btn-sm mt-4" style="width: 60%;">
+                                        <i class="fas fa-poll-h"></i>&nbsp; Show more
+                                    </a>
                                 </div>
                             </div>
-                            <p class="resume-title"><b>{{jobName}}</b></p>
-                            <span class="smaller"><i class="fas fa-building"></i>&nbsp;{{companyName}}</span>
-                            <span class="companyAddress" data-city="{{companyCity}}"><i class="fas fa-map-marker-alt"></i>&nbsp; {{companyCity}}</span>
-                            <span class="a-job smaller"><i class="fas fa-briefcase"></i>&nbsp;{{jobType}}, {{jobLevel}}</span>
-                            <a type="button" href="/announcement-info/{{userApp.id}}/{{id}}"
-                               class="btn btn-primary btn-sm mt-4 px-2" style="width: 55%;">
-                                <i class="fas fa-poll-h"></i>&nbsp; Show more
-                            </a>
                         </div>
                     </li>
                     {{/announcements}}
