--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -23,7 +23,7 @@
     <div class="myCard card m-3 px-5" style="width: 100rem;">
         <div class="row pt-1">
             <div class="col-2 px-0 mt-3">
-                <label><b>Job Type:</b></label>
+                <label><b>Job type:</b></label>
                 <div>
                     <input type="checkbox" id="internshipCheckbox" onchange="filterJobs()"/>
                     <label for="internshipCheckbox">Internship</label>
@@ -37,7 +37,7 @@
                     <label for="fullTimeCheckbox">Full-time</label>
                 </div>
                 <br>
-                <label><b>Job Level:</b></label>
+                <label><b>Experience level:</b></label>
                 <div>
                     <input type="checkbox" id="juniorCheckbox" onchange="filterJobs()"/>
                     <label for="juniorCheckbox">Junior</label>
@@ -56,7 +56,7 @@
                 </div>
                 <br>
                 <div class="pb-5">
-                    <label for="addressInput"><b>Address:</b></label>
+                    <label for="addressInput"><b>Location:</b></label>
                     <input type="text" id="addressInput" class="form-control-sm" oninput="filterJobs()"/>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 <ul class="cards">
                     {{#announcements}}
                     <li class="cards_item">
-                        <div class="card" style="width: 17rem; height: 15rem; margin-right: 2.5%">
+                        <div class="card" style="width: 17rem; height: 15rem;">
                             <div class="row">
                                 <div class="col-6">
                                     <span class="small"><i class="far fa-calendar"></i>&nbsp; {{datePosted}}</span>
@@ -73,14 +73,25 @@
                                     <span class="small"><i class="far fa-calendar-times"></i>&nbsp; {{dateEnded}}</span>
                                 </div>
                             </div>
-                            <p class="resume-title"><b>{{jobName}}</b></p>
-                            <span class="smaller"><i class="fas fa-building"></i>&nbsp;{{companyName}}</span>
-                            <span class="companyAddress" data-city="{{companyCity}}"><i class="fas fa-map-marker-alt"></i>&nbsp; {{companyCity}}</span>
-                            <span class="a-job smaller"><i class="fas fa-briefcase"></i>&nbsp;{{jobType}}, {{jobLevel}}</span>
-                            <a type="button" href="/announcement-info/{{id}}"
-                               class="btn btn-primary btn-sm mt-4 px-2" style="width: 55%;">
-                                <i class="fas fa-poll-h"></i>&nbsp; Show more
-                            </a>
+                            <div class="row">
+                                <p class="resume-title"><b>{{jobName}}</b></p>
+                            </div>
+                            <div class="row">
+                                <span class="smaller"><i class="fas fa-building"></i>&nbsp;{{companyName}}</span>
+                            </div>
+                            <div class="row">
+                                    <span class="companyAddress" data-city="{{companyCity}}"><i
+                                            class="fas fa-map-marker-alt"></i>&nbsp; {{companyCity}}</span>
+                            </div>
+                            <div class="row">
+                                <span class="a-job smaller"><i class="fas fa-briefcase"></i>&nbsp;{{jobType}}, {{jobLevel}}</span>
+                            </div>
+                            <div class="row my-button">
+                                <a type="button" href="/announcement-info/{{id}}"
+                                   class="btn btn-primary btn-sm mt-4 px-2" style="width: 55%;">
+                                    <i class="fas fa-poll-h"></i>&nbsp; Show more
+                                </a>
+                            </div>
                         </div>
                     </li>
                     {{/announcements}}
