--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -23,7 +23,7 @@
 <!--Main layout-->
 <main style="margin-top: 30px; margin-left: 50px">
     <div class="card" style="width: 70rem; height: 41rem;">
-        <div class="container pt-4">
+        <div class="my-cont pt-4">
             {{#company}}
             <div id="myForm">
                 <div class="row">
