--- a/src/main/resources/templates/register-company.html
+++ b/src/main/resources/templates/register-company.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jobs - Register Employer</title>
+    <title>Jobs - Register Company</title>
 
     {{>fragments/links}}
     <!-- Page style -->
@@ -17,7 +17,7 @@
             <div class="col-12 col-lg-9 col-xl-7">
                 <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
                     <div class="card-body p-4 p-md-5">
-                        <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Register</h3>
+                        <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Company Register</h3>
 
                         <form action="/register-company/submit" method="post" name="company">
 
