--- a/src/main/resources/templates/candidate-announcement.html
+++ b/src/main/resources/templates/candidate-announcement.html
@@ -112,9 +112,9 @@
                                 </a>
                                 <ul class="dropdown-menu" style="min-width: 1px;">
                                     <li>
-                                        <a type="button" href=""
+                                        <a type="button" href="/candidate/{{userApp.id}}/{{id}}"
                                            class="btn btn-sm btn-outline-secondary">
-                                            <i class="fas fa-poll-h"></i>&nbsp;
+                                            <i class="fas fa-poll-h"></i>&nbsp; Show details
                                         </a>
                                     </li>
                                 </ul>
