--- a/src/main/resources/templates/jobs-company.html
+++ b/src/main/resources/templates/jobs-company.html
@@ -252,7 +252,7 @@
                                             <div class="row">
                                                 <div class="col-12">
                                                     <label class="form-label"
-                                                           for="responsability">Responsability<span
+                                                           for="responsability">Responsibility<span
                                                             class="error">*</span></label>
                                                     <textarea id="responsibility" rows="4"
                                                               name="responsability"
