--- a/src/main/resources/static/style/candidate-announcement-style.css
+++ b/src/main/resources/static/style/candidate-announcement-style.css
@@ -83,3 +83,31 @@ tbody tr {
 .col4 {
     min-width: 200px;
 }
+
+ul.breadcrumb {
+    padding: 10px 16px;
+    list-style: none;
+    background-color: #eee;
+    max-width: 70rem;
+}
+
+ul.breadcrumb li {
+    display: inline;
+    font-size: 15px;
+}
+
+ul.breadcrumb li+li:before {
+    padding: 8px;
+    color: black;
+    content: "/\00a0";
+}
+
+ul.breadcrumb li a {
+    color: #0275d8;
+    text-decoration: none;
+}
+
+ul.breadcrumb li a:hover {
+    color: #01447e;
+    text-decoration: underline;
+}
