--- a/src/main/resources/templates/jobs-company.html
+++ b/src/main/resources/templates/jobs-company.html
@@ -252,10 +252,10 @@
                                             <div class="row">
                                                 <div class="col-12">
                                                     <label class="form-label"
-                                                           for="responsability">Responsibility<span
+                                                           for="responsibility">Responsibility<span
                                                             class="error">*</span></label>
                                                     <textarea id="responsibility" rows="4"
-                                                              name="responsability"
+                                                              name="responsibility"
                                                               class="form-control"
                                                               required></textarea>
 
