--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -62,33 +62,42 @@
             </div>
         </div>
         <div class="profile">
-            <!-- Avatar -->
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle d-flex align-items-center"
-                       id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown">
-                        <i class="fa fa-user"></i>&nbsp;{{firstName}} {{lastName}}
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+            <div class="row">
+                <!-- Avatar -->
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
 
-                        <li>
-                            <a class="dropdown-item btn-outline-secondary" href="/user-profile/{{id}}">
-                                <i class="far fa-user-circle"></i>&nbsp; My profile</a>
-                        </li>
-                        {{#isUserCompany}}
-                        <li>
-                            <a class="dropdown-item btn-outline-secondary" href="/profile/{{id}}">
-                                <i class="far fa-building"></i>&nbsp; Company profile</a>
-                        </li>
-                        {{/isUserCompany}}
-                        <li>
-                            <a class="dropdown-item btn-outline-secondary" href="/main-page">
-                                <i class="fa fa-sign-out"></i>&nbsp;Logout </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+                        <a class="nav-link dropdown-toggle d-flex align-items-center"
+                           id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown">
+                            <i class="fa fa-user"></i>&nbsp;{{firstName}} {{lastName}}
+
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+
+                            <li>
+                                <a class="dropdown-item btn-outline-secondary" href="/user-profile/{{id}}">
+                                    <i class="far fa-user-circle"></i>&nbsp; My profile</a>
+                            </li>
+                            {{#isUserCompany}}
+                            <li>
+                                <a class="dropdown-item btn-outline-secondary" href="/profile/{{id}}">
+                                    <i class="far fa-building"></i>&nbsp; Company profile</a>
+                            </li>
+                            {{/isUserCompany}}
+                            <li>
+                                <a class="dropdown-item btn-outline-secondary" href="/main-page">
+                                    <i class="fa fa-sign-out"></i>&nbsp;Logout </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
+        {{#isUserCompany}}
+        <div class="row" style="margin-left: 5rem; color: #2a47bd">
+            <b>{{role}}<b>
+        </div>
+        {{/isUserCompany}}
     </div>
 </nav>
 {{/userApp}}
