--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -69,7 +69,7 @@
 
                         <a class="nav-link dropdown-toggle d-flex align-items-center"
                            id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown">
-                            <i class="fa fa-user"></i>&nbsp;{{firstName}} {{lastName}}
+                            <i class="fa fa-user"></i>&nbsp;&nbsp;{{firstName}} {{lastName}}
 
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
