--- a/src/main/resources/templates/announcement-info.html
+++ b/src/main/resources/templates/announcement-info.html
@@ -26,6 +26,10 @@
 
 <!--Main layout-->
 <main style="margin-top: 30px; margin-left: 50px">
+    <ul class="breadcrumb">
+        <li><a href="/dashboard/{{userApp.id}}">Dashboard</a></li>
+        <li>Announcement info</li>
+    </ul>
     {{#announcement}}
     <div class="card mt-5 px-3" style="width: 70rem;">
         <div class="my-cont pb-3">
