--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -94,8 +94,8 @@
             </div>
         </div>
         {{#isUserCompany}}
-        <div class="row" style="margin-left: 5rem; color: #2a47bd">
-            <b>{{role}}<b>
+        <div class="row" style="margin-left: 6rem; color: #2a47bd">
+            <b>{{role}}</b>
         </div>
         {{/isUserCompany}}
     </div>
