--- a/src/main/resources/templates/candidate-announcement.html
+++ b/src/main/resources/templates/candidate-announcement.html
@@ -25,7 +25,7 @@
         <li><a href="/dashboard-company/{{userApp.id}}">Dashboard</a></li>
         <li>Announcement info</li>
     </ul>
-    <div class="card" style="width: 70rem; height: 28rem;">
+    <div class="card mt-0" style="width: 70rem; height: 28rem;">
         <p class="page-title"><b>Announcement</b></p>
         <div id="myForm">
             {{#announcement}}
